/* Interpreting C++, executing the source and executable like a script */
/* By Jesse Liu < neoliu2011@gmail.com >, 2024 */
/* Copyright (c) vpand.com 2024. This file is released under LGPL2.
   See LICENSE in root directory for more details
*/

syntax = "proto3";

package com.vpand.iopad;

enum CommandID {
  OUTPUT       = 0;  // output
  RUN          = 1;  // run the object in payload
  RESPONE      = 99;
}

message Object {
  string name = 1; // source name
  bytes buff = 2;  // compiled object buffer
}

//
// common and specified command message
//

message Command {
  CommandID cmd = 1;
}

//
// common and speficied command response messge
//

message Respond {
  CommandID cmd = 1;
  optional string result = 2;
}
